Bug : Correct the duplicate bugs of footer

--- a/footer/footer.html
+++ b/footer/footer.html
@@ -19,7 +19,7 @@
     <footer>
         <div class="container-fluid footerTop">
             <div class="row footer1">
-                <div class="col-lg-2 col-md-4 col-sm-6">
+                <div class="col-lg-2 col-md-4 col-sm-6 mr-5">
                     <div class="footerI">
                         <h5>ABOUT</h5>
                         <ul>
@@ -30,13 +30,7 @@
                             <li><a href="">Press</a></li>
                             <li><a href="../pages/Corporate_Information/index.html">Corporate Information</a></li>
                             <li><i><a href="">Explore Plus</a></i></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Careers</a></li>
-                            <li><a href="#">Flipkart Stories</a></li>
-                            <li><a href="#">Press</a></li>
-                            <li><a href="#">Corporate Information</a></li>
-                            <li><i><a href="#">Explore Plus</a></i></li>
+                           
                         </ul>
                     </div>
                 </div>
@@ -59,10 +53,6 @@
                             <li><a href="../pages/Shipping/index.html">Shipping</a></li>
                             <li><a href="../pages/Cancellation_and_Returns/index.html">Cancellation & Returns</a></li>
                             <li><a href="">FAQ</a></li>
-                            <li><a href="">Payments</a></li>
-                            <li><a href="">Shipping</a></li>
-                            <li><a href="">Cancellation & Returns</a></li>
-                            <li><a href="/FAQ.html">FAQ</a></li>
                             <li><a href="">Report Infringement</a></li>
                           
                         </ul>
@@ -72,10 +62,10 @@
                     <div class="footerI">
                         <h5>CONSUMER POLICY</h5>
                         <ul>
-                            <li><a href="../pages/Cancellation_and_Returns/index.html">Cancellation & Returns</a></li>
-                            <li><a href="">Terms Of Use</a></li>
-                            <li><a href="../pages/Security_Page/index.html">Security</a></li>
-                            <li><a href="../pages/Privacy/index.html">Privacy</a></li>
+                            <li><a href="../pages/return and Cancellation/return.html">Cancellation & Returns</a></li>
+                            <li><a href="../pages/terms/index.html">Terms Of Use</a></li>
+                            <li><a href="../pages/Security/security.html">Security</a></li>
+                            <li><a href="../pages/privacypolicy/index.html">Privacy</a></li>
                             <li><a href="../pages/Sitemap/index.html">Sitemap</a></li>
                             <li><a href="">Grievance Redressal</a></li>
                             <li><a href="../pages/EPR_Page/epr.html">EPR Compilance</a></li>
